--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -690,7 +690,7 @@ section {
   margin: 0px auto;
   padding: 30px;
   max-width: 600px;
-  height: 600px;
+  /* height: 600px; */
   text-align: center;
   transition: all ease-in-out 0.3s;
   background: #fff;
