--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,6 +148,14 @@ h1, h2, h3, h4, h5, h6 {
 #main {
 }
 
+.quotes {
+  font-weight: 600;
+  font-style: italic;
+  text-align: center !important;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: lightslategray;
+}
+
 @media (max-width: 1366px) {
   #main {
     padding-top: 0px;
